kubernetes/02-mongoDB-MongoExp-deployment/out.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  creationTimestamp: "2021-02-08T10:19:21Z"
  generation: 1
  labels:
    app: mongodb-deployment
  name: mongodb-deployment
  namespace: default
  resourceVersion: "1612292"
  selfLink: /apis/apps/v1/namespaces/default/deployments/mongodb-deployment
  uid: a57df45f-42a9-4c00-9976-e0012ed461f8
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: mongodb-deployment
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: mongodb-deployment
    spec:
      containers:
      - image: mongo
        imagePullPolicy: Always
        name: mongo
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2021-02-08T10:19:23Z"
    lastUpdateTime: "2021-02-08T10:19:23Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2021-02-08T10:19:21Z"
    lastUpdateTime: "2021-02-08T10:19:23Z"
    message: ReplicaSet "mongodb-deployment-8f997d799" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 1
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
