kubernetes/02-mongoDB-MongoExp-deployment/mongoexpress-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongoexpres-deployment
  labels:
    app: mongoexpress
  namespace: default
spec:
  replicas: 1
  minReadySeconds: 45
  selector:
    matchLabels:
      app: mongoexpress
  template:
    metadata:
      name: mongoexpress
      labels:
        app: mongoexpress
    spec:
      containers:
        - image: mongo-express
          name: mongoexpress
          ports:
            - containerPort : 8081
---
apiVersion: v1
kind: Service
metadata:
  name: mongoexpress-service
spec:
  selector:
    app: mongoexpress
  ports:
    - port: 8081
      targetPort: 8081
      protocol: TCP
