kubernetes/02-mongoDB-MongoExp-deployment/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mongo-express-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: mongodeplexpress.com
      http:
        paths:
          - path: /
            backend:
              serviceName: mongoexpress-service
              servicePort: 8081
